--- a/Views/Home/SanPhamMoi.cshtml
+++ b/Views/Home/SanPhamMoi.cshtml
@@ -15,7 +15,7 @@
                                 <div class="single-product">
                                     <div class="product-img">
                                         <a href="@Url.Action("ChiTietSanPham", "Sanpham",new {maLoai = item.MaLoaiSP, maNSX = item.MANSX, id = item.MaSP ,@tensp = item.TenSP})">
-                                            <img class="primary-img" src="@Url.Content("~/assets/images/product-mini/" + @item.HinhAnh1)" alt="FB'S Prduct">
+                                            <img class="primary-img" src="@Url.Content("~/assets/images/product/" + @item.HinhAnh)" alt="FB'S Prduct">
                                             <img class="secondary-img" src="@Url.Content("~/assets/images/product-mini/" + @item.HinhAnh2)" alt="FB'S Prduct">
                                         </a>
                                         <div class="sticker"><span>New</span></div>
