--- a/Views/QuanLySanPham/ThemMoi.cshtml
+++ b/Views/QuanLySanPham/ThemMoi.cshtml
@@ -1,7 +1,7 @@
-﻿@model WebsiteBanHang.Models.SanPham
-
+﻿@using WebsiteBanHang.Models
+@model SanPham
 @{
-    ViewBag.Title = "ChinhSua";
+    ViewBag.Title = "Themmoi";
     Layout = "~/Views/Layout/_LayoutAdmin.cshtml";
 }
 <script src="~/assets/tinymce/js/tinymce/tinymce.min.js"></script> @*sử dụng control editor tinymce*@
@@ -22,172 +22,125 @@
 @using (Html.BeginForm("ThemMoi", "QuanLySanPham", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    <div class="form-horizontal">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            <label class="control-label col-md-2">Tên sản phẩm</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TenSP, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TenSP, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Đơn giá</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DonGia, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DonGia, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Ngày cập nhật</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.NgayCapNhat, new { htmlAttributes = new { @class = "form-control", @type = "date", @Value = DateTime.Now.ToString("yyyy-MM-dd") } })
-                @Html.ValidationMessageFor(model => model.NgayCapNhat, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Cấu hình</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CauHinh, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CauHinh, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Mô tả</label>
-            <div class="col-md-12">
-                <form method="post">
-                    <textarea id="mytextarea" name="MoTa" class="form-control"></textarea>
-                </form>
-                @Html.ValidationMessageFor(model => model.MoTa, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Số lượng tồn</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SoLuongTon, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SoLuongTon, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Lượt xem</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.LuotXem, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LuotXem, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Lượt bình chọn</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.LuotBinhChon, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LuotBinhChon, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Lượt bình luận</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.LuotBinhLuan, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LuotBinhLuan, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Số lần mua</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SoLanMua, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SoLanMua, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Mới</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Moi, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Moi, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Nhà cung cấp</label>
-            <div class="col-md-10">
-                @Html.DropDownList("MaNCC", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.MANCC, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Nhà sản xuất</label>
-            <div class="col-md-10">
-                @Html.DropDownList("MaNSX", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.MANSX, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Loại sản phẩm</label>
-            <div class="col-md-10">
-                @Html.DropDownList("MaLoaiSP", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.MaLoaiSP, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DaXoa, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.DaXoa)
-                    @Html.ValidationMessageFor(model => model.DaXoa, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Hình ảnh</label>
-            <div class="col-md-10">
-                <input name="HinhAnh" type="file" />
-                <span style="color:red;font-size:13px">@ViewBag.upload</span>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Hình ảnh 1</label>
-            <div class="col-md-10">
-                <input name="HinhAnh1" type="file" />
-                <span style="color:red;font-size:13px">@ViewBag.upload</span>
-                @Html.ValidationMessageFor(model => model.HinhAnh1, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Hình ảnh 2</label>
-            <div class="col-md-10">
-                <input name="HinhAnh2" type="file" />
-                <span style="color:red;font-size:13px">@ViewBag.upload</span>
-                @Html.ValidationMessageFor(model => model.HinhAnh2, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Hình ảnh 3</label>
-            <div class="col-md-10">
-                <input name="HinhAnh3" type="file" />
-                <span style="color:red;font-size:13px">@ViewBag.upload</span>
-                @Html.ValidationMessageFor(model => model.HinhAnh3, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Lưu" class="btn btn-primary" />
-            </div>
+<div class="form-horizontal">
+    @Html.ValidationSummary(true, "", new { @class = "text-danger validation" })
+    <div class="form-group">
+        <label class="control-label col-md-2">Tên sản phẩm</label>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.TenSP, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.TenSP, "", new { @class = "text-danger validation" })
         </div>
     </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2">Đơn giá</label>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.DonGia, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.DonGia, "", new { @class = "text-danger validation" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2">Ngày cập nhật</label>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.NgayCapNhat, new { htmlAttributes = new { @class = "form-control", @type = "date", @Value = DateTime.Now.ToString("yyyy-MM-dd") } })
+            @Html.ValidationMessageFor(model => model.NgayCapNhat, "", new { @class = "text-danger validation" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2">Cấu hình</label>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.CauHinh, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.CauHinh, "", new { @class = "text-danger validation" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2">Mô tả</label>
+        <div class="col-md-12">
+            <form method="post" onsubmit="return validateForm()">
+                <textarea id="mytextarea" name="MoTa" class="form-control"></textarea>
+            </form>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2">Số lượng tồn</label>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.SoLuongTon, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.SoLuongTon, "", new { @class = "text-danger validation" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2">Nhà cung cấp</label>
+        <div class="col-md-10">
+            @Html.DropDownList("MaNCC", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.MANCC, "", new { @class = "text-danger validation" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2">Nhà sản xuất</label>
+        <div class="col-md-10">
+            @Html.DropDownList("MaNSX", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.MANSX, "", new { @class = "text-danger validation" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2">Loại sản phẩm</label>
+        <div class="col-md-10">
+            @Html.DropDownList("MaLoaiSP", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.MaLoaiSP, "", new { @class = "text-danger validation" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2">Hình ảnh</label>
+        <div class="col-md-10">
+            <input id="fileInput" name="HinhAnh" type="file" onchange="validateImage()" />
+            <span style="color:red;font-size:13px">@ViewBag.upload</span>
+            <span style="color:red;font-size:13px">@ViewBag.Images</span>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2">Hình ảnh 1</label>
+        <div class="col-md-10">
+            <input id="fileInput1" name="HinhAnh1" type="file" onchange="validateImage()" />
+            <span style="color:red;font-size:13px">@ViewBag.upload</span>
+            <span style="color:red;font-size:13px">@ViewBag.Images</span>
+
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2">Hình ảnh 2</label>
+        <div class="col-md-10">
+            <input id="fileInput2" name="HinhAnh2" type="file" onchange="validateImage()" />
+            <span style="color:red;font-size:13px">@ViewBag.upload</span>
+            <span style="color:red;font-size:13px">@ViewBag.Images</span>
+
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2">Hình ảnh 3</label>
+        <div class="col-md-10">
+            <input id="fileInput3" name="HinhAnh3" type="file" onchange="validateImage()" />
+            <span style="color:red;font-size:13px">@ViewBag.upload</span>
+            <span style="color:red;font-size:13px">@ViewBag.Images</span>
+
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Lưu" class="btn btn-primary" />
+        </div>
+    </div>
+</div>
 }
 <style>
     .form-horizontal {
@@ -211,3 +164,46 @@
         width: 120%;
     }
 </style>
+<script>
+    function validateImage() {
+        //// Lấy giá trị của trường input file
+        var fileInput = document.getElementById("fileInput");
+        var file = fileInput.files[0];
+        // Kiểm tra nếu trường input file không rỗng
+        if (file) {
+            // Kiểm tra định dạng của hình ảnh
+            if (file.type !== "image/jpeg" && file.type !== "image/png") {
+                alert("Hình ảnh không hợp lệ. Chỉ chấp nhận định dạng JPEG hoặc PNG.");
+                // Xóa giá trị của trường input file
+                fileInput.value = "";
+            }
+        }
+
+        var fileInput = document.getElementById("fileInput1");
+        var file = fileInput.files[1];
+        if (file) {
+            if (file.type !== "image/jpeg" && file.type !== "image/png") {
+                alert("Hình ảnh không hợp lệ. Chỉ chấp nhận định dạng JPEG hoặc PNG.");
+                fileInput.value = "";
+            }
+        }
+
+        var fileInput = document.getElementById("fileInput2");
+        var file = fileInput.files[2];
+        if (file) {
+            if (file.type !== "image/jpeg" && file.type !== "image/png") {
+                alert("Hình ảnh không hợp lệ. Chỉ chấp nhận định dạng JPEG hoặc PNG.");
+                fileInput.value = "";
+            }
+        }
+
+        var fileInput = document.getElementById("fileInput3");
+        var file = fileInput.files[3];
+        if (file) {
+            if (file.type !== "image/jpeg" && file.type !== "image/png") {
+                alert("Hình ảnh không hợp lệ. Chỉ chấp nhận định dạng JPEG hoặc PNG.");
+                fileInput.value = "";
+            }
+        }
+    }
+</script>
