--- a/Views/Layout/_LayoutAdmin.cshtml
+++ b/Views/Layout/_LayoutAdmin.cshtml
@@ -19,6 +19,16 @@
     <!-- Custom styles for this template-->
     <link href="~/assets/admin/css/sb-admin-2.css" rel="stylesheet">
     <link href="~/assets/admin/css/sb-admin-2.min.css" rel="stylesheet">
+
+    <script src="~/assets/js/vendor/modernizr-3.11.2.min.js"></script>
+
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+
+    <script src="~/Scripts/jquery-3.7.1.js"></script>
+
+    <script src="~/Scripts/jquery.validate.js"></script>
+
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
 </head>
 
 <body id="page-top">
@@ -52,6 +62,7 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="@Url.Action("ThongTinSanPham","QuanLySanPham")">Thông tin sản phẩm</a>
+                        <a class="collapse-item" href="@Url.Action("NhapHang","QuanLyNhapHang")">Nhập hàng</a>
                     </div>
                 </div>
             </li>
@@ -61,16 +72,15 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                    aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
-                    <span>Nhà cung cấp</span>
+                    <span>Quản lý đơn đặt hàng</span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                      data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Colors</a>
-                        <a class="collapse-item" href="utilities-border.html">Borders</a>
-                        <a class="collapse-item" href="utilities-animation.html">Animations</a>
-                        <a class="collapse-item" href="utilities-other.html">Other</a>
+                        <a class="collapse-item" href="@Url.Action("ChuaThanhToan","QuanLyDatHang")">Chưa thanh toán</a>
+                        <a class="collapse-item" href="@Url.Action("ChuaGiao","QuanLyDatHang")">Chưa giao (Thanh toán)</a>
+                        <a class="collapse-item" href="@Url.Action("DaGiaoDaThanhToan","QuanLyDatHang")">Đã thanh toán</a>
+                        <a class="collapse-item" href="utilities-other.html">Thống kê</a>
                     </div>
                 </div>
             </li>
@@ -131,8 +141,7 @@
         </ul>
         <!-- End of Sidebar -->
         <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
-
+        <div id="content-wrapper" class=""><!-- flex flex-column -->
             <!-- Main Content -->
             <div id="content">
 
@@ -349,16 +358,6 @@
             </div>
             @RenderBody()
             <!-- End of Main Content -->
-            <!-- Footer -->
-            <footer class="sticky-footer bg-white">
-                <div class="container my-auto">
-                    <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2021</span>
-                    </div>
-                </div>
-            </footer>
-            <!-- End of Footer -->
-
         </div>
         <!-- End of Content Wrapper -->
 
