--- a/Views/QuanLySanPham/ChinhSua.cshtml
+++ b/Views/QuanLySanPham/ChinhSua.cshtml
@@ -18,7 +18,14 @@
             'bullist numlist checklist outdent indent | removeformat | a11ycheck code table help'
     });
 </script>
-
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script>
+    $(function () {
+        $(".datepicker").datepicker();
+    });
+</script>
 @using (Html.BeginForm("ChinhSua", "QuanLySanPham", FormMethod.Post, new
 {
     @enctype = "multipart/from-data"
@@ -47,11 +54,8 @@
     <div class="form-group">
         <label class="control-label col-md-2">Ngày cập nhật</label>
         <div class="col-md-12">
-            @if (Model.NgayCapNhat != null)
-            {
-                @Html.EditorFor(model => model.NgayCapNhat, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NgayCapNhat, "", new { @class = "text-danger" })
-            }
+            @Html.TextBoxFor(model => model.NgayCapNhat, "{0:dd-MM-yyyy}", new { @class = "form-control datepicker" })
+            @Html.ValidationMessageFor(model => model.NgayCapNhat, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -143,7 +147,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.DaXoa, htmlAttributes: new { @class = "control-label col-md-2" })
+        <label class="control-label col-md-2">Đã xóa</label>
         <div class="col-md-10">
             <div class="checkbox">
                 @Html.EditorFor(model => model.DaXoa)
@@ -156,8 +160,9 @@
         <label class="control-label col-md-2">Hình ảnh</label>
         <div class="col-md-12">
             <input name="HinhAnh" type="file" />
-            <span style="color:red;font-size:13px">@ViewBag.upload</span>
-            <img src="@Url.Content("~/assets/images/product/"+Model.HinhAnh)" />
+            <span style="color:red; font-size:13px;">@ViewBag.upload</span>
+            <img src="@Url.Content("~/assets/images/product/" + Model.HinhAnh)" />
+
         </div>
     </div>
 
@@ -184,6 +189,7 @@
             <img src="@Url.Content("~/assets/images/product-mini/"+Model.HinhAnh3)" width="250" height="214" />
         </div>
     </div>
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Lưu" class="btn btn-primary" />
