--- a/Views/QuanLyDatHang/ChuaGiao.cshtml
+++ b/Views/QuanLyDatHang/ChuaGiao.cshtml
@@ -94,7 +94,7 @@
                             @item.KhachHang.TenKH
                         </td>
                         <td>
-                            <a href="@Url.Action("DuyetDonHang", "QuanLyDatHang", new{ id = item.MaDDH })">Duyệt đơn hàng</a>
+                            <a href="@Url.Action("ChiTietDonHang", "QuanLyDatHang", new{ id = item.MaDDH })">Chi tiết đơn hàng</a>
                         </td>
                     </tr>
                 }
