--- a/Views/Layout/_LayoutAdmin.cshtml
+++ b/Views/Layout/_LayoutAdmin.cshtml
@@ -15,7 +15,7 @@
     <link href="~/assets/admin/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Custom styles for this template-->
     <link href="~/assets/admin/css/sb-admin-2.css" rel="stylesheet">
     <link href="~/assets/admin/css/sb-admin-2.min.css" rel="stylesheet">
@@ -78,9 +78,9 @@
                      data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="@Url.Action("ChuaThanhToan","QuanLyDatHang")">Chưa thanh toán</a>
-                        <a class="collapse-item" href="@Url.Action("ChuaGiao","QuanLyDatHang")">Chưa giao (Thanh toán)</a>
-                        <a class="collapse-item" href="@Url.Action("DaGiaoDaThanhToan","QuanLyDatHang")">Đã thanh toán</a>
-                        <a class="collapse-item" href="utilities-other.html">Thống kê</a>
+                        <a class="collapse-item" href="@Url.Action("ChuaGiao","QuanLyDatHang")">Chưa giao (đã hanh toán)</a>
+                        <a class="collapse-item" href="@Url.Action("DaGiaoDaThanhToan","QuanLyDatHang")">Đã giao (đã thanh toán)</a>
+                        <a class="collapse-item" href="@Url.Action("ThongKeSanPham","ThongKe")">Thống kê</a>
                     </div>
                 </div>
             </li>
