--- a/Views/QuanLyDatHang/ChuaGiao.cshtml
+++ b/Views/QuanLyDatHang/ChuaGiao.cshtml
@@ -47,11 +47,11 @@
                         <td>
                             @if (item.TinhTrangGiaoHang == false)
                             {
-                                <span style="color: red">@item.TinhTrangGiaoHang</span>
+                                <span style="color: red">Chưa giao hàng</span>
                             }
                             else
                             {
-                                <span style="color: green">@item.TinhTrangGiaoHang</span>
+                                <span style="color: green">Đã giao hàng</span>
                             }
                         </td>
                         <td>
@@ -60,11 +60,11 @@
                         <td>
                             @if (item.DaThanhToan == false)
                             {
-                                <span style="color: red">@item.DaThanhToan</span>
+                                <span style="color: red">Chưa thanh toán</span>
                             }
                             else
                             {
-                                <span style="color: green">@item.DaThanhToan</span>
+                                <span style="color: green">Đã thanh toán</span>
                             }
                         </td>
                         <td>
