--- a/Views/ThongKe/ThongKeSanPham.cshtml
+++ b/Views/ThongKe/ThongKeSanPham.cshtml
@@ -13,12 +13,12 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                Earnings (Monthly)
+                                Online
                             </div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.SoNguoiDangHoatDong</div>
                         </div>
                         <div class="col-auto">
-                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                            <i style="font-size:35px" class="fa-solid fa-signal"></i>
                         </div>
                     </div>
                 </div>
@@ -32,12 +32,12 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                Earnings (Annual)
+                                Doanh Thu
                             </div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.TongDoanhThu.ToString("#,## ₫")</div>
                         </div>
                         <div class="col-auto">
-                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                            <i style=" font-size:35px" class="fa-solid fa-money-bill"></i>
                         </div>
                     </div>
                 </div>
@@ -51,23 +51,18 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
-                                Tasks
+                                Thành viên
                             </div>
                             <div class="row no-gutters align-items-center">
                                 <div class="col-auto">
-                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%</div>
+                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">@ViewBag.TongThanhVien</div>
                                 </div>
                                 <div class="col">
-                                    <div class="progress progress-sm mr-2">
-                                        <div class="progress-bar bg-info" role="progressbar"
-                                             style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-                                             aria-valuemax="100"></div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-auto">
-                            <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                            <i style="font-size:25px" class="fa-solid fa-user"></i>
                         </div>
                     </div>
                 </div>
@@ -81,12 +76,12 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                Số Người Truy Cập
+                                Tổng số đơn đặt hàng
                             </div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.SoNguoiTruyCap</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.ThongKeDonDatHang</div>
                         </div>
                         <div class="col-auto">
-                            <i style="font-size:25px" class="fa-regular fa-eye"></i>
+                            <i style="font-size:35px" class="fa-solid fa-cart-shopping"></i>
                         </div>
                     </div>
                 </div>
