--- a/Views/Home/DangNhap.cshtml
+++ b/Views/Home/DangNhap.cshtml
@@ -22,10 +22,9 @@
                             </div>
                             <div class="col-12 mb-20">
                                 @Html.LabelFor(model => model.MatKhau)
-                                <input type="password" name="Password" placeholder="Tài khoản">
+                                <input type="password" name="Password" placeholder="Mật khẩu">
                                 @Html.ValidationMessageFor(model => model.MatKhau, null, new { @class = "text-danger validation" })
                             </div>
-                            @*<span id="thong-bao" style="color:red;text-align:left;font-size:13px;">@ViewBag.ThongBao</span>*@
                             <div class="col-md-8">
                                 <div class="check-box d-inline-block ml-0 ml-md-2 mt-10">
                                     <input type="checkbox" id="remember_me">
