--- a/Views/Sanpham/ChiTietSanPham.cshtml
+++ b/Views/Sanpham/ChiTietSanPham.cshtml
@@ -87,7 +87,7 @@
                                 <div class="product-desc">
                                     <p>
                                         <span>
-                                            @Model.CauHinh
+                                            @Html.Raw(Model.CauHinh)
                                         </span>
                                     </p>
                                 </div>
