--- a/Views/ThongKe/ThongKeSanPham.cshtml
+++ b/Views/ThongKe/ThongKeSanPham.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "ThongKe";
     Layout = "~/Views/Layout/_LayoutAdmin.cshtml";
 }
@@ -89,3 +88,4 @@
         </div>
     </div>
 </div>
+@Html.Partial("~/Views/Quyen/DanhSachLoaiThanhVien.cshtml")
