--- a/Views/GioHang/XemGioHang.cshtml
+++ b/Views/GioHang/XemGioHang.cshtml
@@ -4,9 +4,6 @@
     ViewBag.Title = "XemGioHang";
     Layout = "~/Views/Layout/_LayoutHomeProduct.cshtml";
 }
-@{
-    List<ItemGioHang> itemGioHangs = (List<ItemGioHang>)ViewBag.ListGioHang;
-}
 @if (Model.Count == 0)
 {
     <div class="cart">
@@ -28,85 +25,57 @@ else
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    @using (Html.BeginForm("MuaHang", "GioHang"))
-                    {
-                        <div class="table-content table-responsive">
-                            <table class="table">
-                                <thead>
+                    <div class="table-content table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th class="fb-product-thumbnail">Hình <span style="text-transform: lowercase; ">ảnh</span></th>
+                                    <th class="cart-product-name">Tên <span style="text-transform: lowercase; ">sản phẩm</span></th>
+                                    <th class="fb-product-price">Giá</th>
+                                    <th class="fb-product-quantity">Số <span style="text-transform: lowercase; ">lượng</span></th>
+                                    <th class="fb-product-subtotal">Tổng <span style="text-transform: lowercase; ">thanh toán</span></th>
+                                    <th class="fb-product-remove">Chỉnh sửa</th>
+                                    <th class="fb-product-remove">Xóa</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
                                     <tr>
-                                        <th class="fb-product-thumbnail">Hình <span style="text-transform: lowercase; ">ảnh</span></th>
-                                        <th class="cart-product-name">Tên <span style="text-transform: lowercase; ">sản phẩm</span></th>
-                                        <th class="fb-product-price">Giá</th>
-                                        <th class="fb-product-quantity">Số <span style="text-transform: lowercase; ">lượng</span></th>
-                                        <th class="fb-product-subtotal">Tổng <span style="text-transform: lowercase; ">thanh toán</span></th>
-                                        <th class="fb-product-remove">Xóa</th>
+
+                                        <td class="fb-product-thumbnail" style="width:90px; height:90px;"><img src="@Url.Content("~/assets/images/product/" + item.HinhAnh)" alt="FB's Product Image" /></td>
+                                        <td class="fb-product-name"><a href="@Url.Action("ChiTietSanPham", "Sanpham", new { maLoai = item.MaLoai, maNSX = item.MaNSX, id = item.MaSP, @tensp = item.TenSP })">@item.TenSP</a></td>
+                                        <td class="fb-product-price"><span class="amount">@item.DonGia.ToString("#,##")₫</span></td>
+                                        <td><span> @item.SoLuong</span></td>
+                                        <td class="product-subtotal"><span class="amount">@item.ThanhTien.ToString("#,##")₫</span></td>
+                                        <td>
+                                            @Html.ActionLink("Chỉnh sửa", "UpdateCard", new { @maSP = item.MaSP })
+                                        </td>
+                                        <td class="fb-product-remove">
+                                            @Html.ActionLink("x", "XoaGioHang", new { @maSP = item.MaSP })
+                                        </td>
                                     </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var item in Model)
-                                    {
-                                        <tr>
-                                            <td class="fb-product-thumbnail" style="width:90px; height:90px;"><img src="@Url.Content("~/assets/images/product/" + item.HinhAnh)" alt="FB's Product Image" /></td>
-                                            <td class="fb-product-name"><a href="@Url.Action("ChiTietSanPham", "Sanpham", new { maLoai = item.MaLoai, maNSX = item.MaNSX, id = item.MaSP, @tensp = item.TenSP })">@item.TenSP</a></td>
-                                            <td class="fb-product-price"><span class="amount">@item.DonGia.ToString("#,##")₫</span></td>
-                                            <td class="quantity">
-                                                <label>Số lượng</label>
-                                                <div class="cart-plus-minus" data-maSP="@item.MaSP">
-                                                    <input class="cart-plus-minus-box" value="@item.SoLuong" type="text" readonly>
-                                                    <div class="dec qtybutton"><i class="fa fa-angle-down"></i></div>
-                                                    <div class="inc qtybutton"><i class="fa fa-angle-up"></i></div>
-                                                </div>
-                                            </td>
-                                            <td class="product-subtotal"><span class="amount">@item.ThanhTien.ToString("#,##")₫</span></td>
-                                            <td class="fb-product-remove">
-                                                @Html.ActionLink("x", "XoaGioHang", new { @maSP = item.MaSP })
-                                            </td>
-                                        </tr>
-                                    }
-                                </tbody>
-                            </table>
-                        </div>
-                        <div class="row" style="margin-top:25px">
-                            <div class="col-md-5 ms-auto" style="margin-top:7px">
-                                <div class="cart-page-total">
-                                    <h2>Cart totals</h2>
-                                    <ul>
-                                        <li>Số lượng <span>@ViewBag.TinhSoLuong</span></li>
-                                        <li>Tổng thành tiền <span>@ViewBag.TongTien.ToString("#,##0")₫</span></li>
-                                    </ul>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="row" style="margin-top:25px">
+                        <div class="col-md-5 ms-auto" style="margin-top:7px">
+                            <div class="cart-page-total">
+                                <h2>Cart totals</h2>
+                                <ul>
+                                    <li>Số lượng <span>@ViewBag.TinhSoLuong</span></li>
+                                    <li>Tổng thành tiền <span>@ViewBag.TongTien.ToString("#,##0")₫</span></li>
+                                </ul>
+                                @using (Html.BeginForm("MuaHang", "GioHang"))
+                                {
                                     <input class="fb-btn" type="submit" value="Mua Ngay" id="btnmuahang" style="margin-top:33px;" />
-                                </div>
+                                }
                             </div>
                         </div>
-                    }
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 }
-<script>
-    $(document).ready(function () {
-        $(".qtybutton").on("click", function () {
-            var maSP = $(this).closest(".cart-plus-minus").data("maSP");
-            var action = $(this).hasClass("inc") ? "tang" : "giam";
-
-            $.ajax({
-                url: "/GioHang/CapNhatSoLuong",
-                type: "POST",
-                data: { maSP: maSP, action: action },
-                success: function (data) {
-                    // Cập nhật giao diện với dữ liệu mới từ server
-                    $(".cart-plus-minus-box[data-maSP='" + maSP + "']").val(data.ThanhTien);
-                    $(".product-subtotal[data-maSP='" + maSP + "']").html("<span class='amount'>" + data.ThanhTien.toString("#,##") + "₫</span>");
-
-                    // Cập nhật tổng tiền và số lượng tổng
-                    $("#tongSoLuong").html(data.TinhSoLuong);
-                    $("#tongTien").html(data.TongTien.toString("#,##") + "₫");
-                },
-                error: function () {
-                    alert("Đã xảy ra lỗi khi cập nhật số lượng.");
-                }
-            });
-        });
-    });
-</script>
