--- a/Views/QuanLyDatHang/ChuaGiao.cshtml
+++ b/Views/QuanLyDatHang/ChuaGiao.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Chuathanhtoan";
     Layout = "~/Views/Layout/_LayoutAdmin.cshtml";
 }
+@Html.Partial("~/Views/ThongKe/ThongKeSanPham.cshtml")
 <div class="card-body">
     <div class="table-responsive">
         <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
