--- a/Views/Home/Menupartial.cshtml
+++ b/Views/Home/Menupartial.cshtml
@@ -52,7 +52,7 @@
                                 }
                             }
                             <li>
-                                <a href="@Url.Action("GioiThieu","Home")">Giới thiệu</a>
+                                <a href="@Url.Action("GioiThieu","Home")">Tin Tức</a>
                             </li>
                             <li>
                                 <a href="@Url.Action("LienHe","Home")">Liên hệ</a>
