--- a/Views/Layout/_LayoutAdmin.cshtml
+++ b/Views/Layout/_LayoutAdmin.cshtml
@@ -43,6 +43,7 @@
             @Html.Partial("~/Views/QuanLySanPham/MenuProductPartial.cshtml")
             @Html.Partial("~/Views/QuanLyDatHang/MenuOrderPartial.cshtml")
             @Html.Partial("~/Views/Quyen/MenuRolePartial.cshtml")
+            @Html.Partial("~/Views/News/MenuNews.cshtml")
             <div class="text-center d-none d-md-inline">
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
             </div>
