--- a/Views/QuanLySanPham/Remove.cshtml
+++ b/Views/QuanLySanPham/Remove.cshtml
@@ -47,11 +47,8 @@
     <div class="form-group">
         <label class="control-label col-md-2">Ngày cập nhật</label>
         <div class="col-md-12">
-            @if (Model.NgayCapNhat != null)
-            {
-                @Html.EditorFor(model => model.NgayCapNhat, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NgayCapNhat, "", new { @class = "text-danger" })
-            }
+            @Html.TextBoxFor(model => model.NgayCapNhat, "{0:dd-MM-yyyy}", new { @class = "form-control datepicker" })
+            @Html.ValidationMessageFor(model => model.NgayCapNhat, "", new { @class = "text-danger" })
         </div>
     </div>
 
