--- a/Views/Quyen/ListRole.cshtml
+++ b/Views/Quyen/ListRole.cshtml
@@ -13,10 +13,10 @@
         <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.MaQuyen)
+                    Mã quyền
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.TenQuyen)
+                    Tên quyền
                 </th>
                 <th>Chức năng</th>
             </tr>
