--- a/Views/Layout/_LayoutSearch.cshtml
+++ b/Views/Layout/_LayoutSearch.cshtml
@@ -7,235 +7,10 @@
                 <!--Category Menu Start-->
                 <div class="category-menu category-menu-hidden">
                     <div class="category-heading">
-                        <h2 class="categories-toggle"><span>All Categories</span></h2>
+                        <h2 class="categories-toggle"><span>All Producer</span></h2>
                     </div>
                     <div id="cate-toggle" class="category-menu-list">
-                        <ul>
-                            <li class="right-menu">
-                                <a href="shop.html">
-                                    <span>
-                                        <img src="~/assets/images/category-thumb/1.png"
-                                             alt="Category-thumb">
-                                    </span>Electronics
-                                </a>
-                                <ul class="cat-mega-menu">
-                                    <li class="right-menu cat-mega-title">
-                                        <a href="shop.html">Cameras</a>
-                                        <ul>
-                                            <li><a href="#">Cords and Cables</a></li>
-                                            <li><a href="#">gps accessories</a></li>
-                                            <li><a href="#">Microphones</a></li>
-                                            <li><a href="#">Wireless Transmitters</a></li>
-                                        </ul>
-                                        <a class="cat-mega-title-2 pt-30 pt-sm-10 pt-xs-10"
-                                           href="shop.html">GamePad</a>
-                                        <ul>
-                                            <li><a href="#">cube lifestyle hd</a></li>
-                                            <li><a href="#">gopro hero4</a></li>
-                                            <li><a href="#">handycam cx405</a></li>
-                                            <li><a href="#">vixia hf r600</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="right-menu cat-mega-title">
-                                        <a href="shop.html">Digital Cameras</a>
-                                        <ul>
-                                            <li><a href="#">Gold eye</a></li>
-                                            <li><a href="#">Questek</a></li>
-                                            <li><a href="#">Snm</a></li>
-                                            <li><a href="#">Vantech</a></li>
-                                        </ul>
-                                        <a class="cat-mega-title-2 pt-30 pt-sm-10 pt-xs-10"
-                                           href="shop.html">Virtual Reality</a>
-                                        <ul>
-                                            <li><a href="#">Samsung</a></li>
-                                            <li><a href="#">Toshiba</a></li>
-                                            <li><a href="#">Transcend</a></li>
-                                            <li><a href="#">Sandisk</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="right-menu">
-                                <a href="shop.html">
-                                    <span>
-                                        <img src="~/assets/images/category-thumb/2.png"
-                                             alt="Category-thumb">
-                                    </span>Book
-                                </a>
-                                <ul class="cat-mega-menu">
-                                    <li class="right-menu cat-mega-title">
-                                        <a href="shop.html">Children's Books</a>
-                                        <ul>
-                                            <li><a href="#">Early Learning</a></li>
-                                            <li><a href="#">Animals</a></li>
-                                            <li><a href="#">Action & Adventure</a></li>
-                                            <li><a href="#">Education & Reference</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="right-menu cat-mega-title">
-                                        <a href="shop.html">comic book</a>
-                                        <ul>
-                                            <li><a href="#">Superhero</a></li>
-                                            <li><a href="#">Slice-of-Life</a></li>
-                                            <li><a href="#">Humor</a></li>
-                                            <li><a href="#">Science-Fiction</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="right-menu">
-                                <a href="shop.html">
-                                    <span>
-                                        <img src="~/assets/images/category-thumb/3.png"
-                                             alt="Category-thumb">
-                                    </span>Home & Kitchen
-                                </a>
-                                <ul class="cat-mega-menu cat-mega-menu-2">
-                                    <li class="right-menu cat-mega-title">
-                                        <a href="shop.html">Large Appliances</a>
-                                        <ul>
-                                            <li><a href="#">Armchairs</a></li>
-                                            <li><a href="#">Bunk Bed</a></li>
-                                            <li><a href="#">Mattress</a></li>
-                                            <li><a href="#">Sideboard</a></li>
-                                        </ul>
-                                        <a class="cat-mega-title-2 pt-30 pt-sm-10 pt-xs-10"
-                                           href="shop.html">Small Appliances</a>
-                                        <ul>
-                                            <li><a href="#">Bootees Bags</a></li>
-                                            <li><a href="#">Jackets</a></li>
-                                            <li><a href="#">Shelf</a></li>
-                                            <li><a href="#">Shoes</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="right-menu cat-mega-title">
-                                        <a href="shop.html">Drinkware</a>
-                                        <ul>
-                                            <li><a href="#">Tour Drinkware</a></li>
-                                            <li><a href="#">Hatch Drinkware</a></li>
-                                            <li><a href="#">Direction Drinkware</a></li>
-                                            <li><a href="#">Crescent Drinkware</a></li>
-                                        </ul>
-                                        <a class="cat-mega-title-2 pt-30 pt-sm-10 pt-xs-10"
-                                           href="shop.html">Cookware</a>
-                                        <ul>
-                                            <li><a href="#">Cookware Brands</a></li>
-                                            <li><a href="#">Cookware Sets</a></li>
-                                            <li><a href="#">Individual Cookware</a></li>
-                                            <li><a href="#">Enamel Cookware</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="right-menu">
-                                <a href="shop.html">
-                                    <span>
-                                        <img src="~/assets/images/category-thumb/4.png"
-                                             alt="Category-thumb">
-                                    </span>Phones & Tablets
-                                </a>
-                                <ul class="cat-mega-menu">
-                                    <li class="right-menu cat-mega-title">
-                                        <a href="shop.html">Tablet</a>
-                                        <ul>
-                                            <li><a href="#">Chamcham</a></li>
-                                            <li><a href="#">Sanai</a></li>
-                                            <li><a href="#">Meito</a></li>
-                                            <li><a href="#">Walton</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="right-menu cat-mega-title">
-                                        <a href="shop.html">Smartphone</a>
-                                        <ul>
-                                            <li><a href="#">Xail</a></li>
-                                            <li><a href="#">Sanai</a></li>
-                                            <li><a href="#">Meito</a></li>
-                                            <li><a href="#">Chamcham</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="right-menu">
-                                <a href="shop.html">
-                                    <span>
-                                        <img src="~/assets/images/category-thumb/5.png"
-                                             alt="Category-thumb">
-                                    </span>Furnitured
-                                </a>
-                                <ul class="cat-mega-menu">
-                                    <li class="right-menu cat-mega-title">
-                                        <a href="shop.html">bedroom</a>
-                                        <ul>
-                                            <li><a href="#">Bed</a></li>
-                                            <li><a href="#">lamp</a></li>
-                                            <li><a href="#">Mattress Sets</a></li>
-                                            <li><a href="#">Home Office</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="right-menu cat-mega-title">
-                                        <a href="shop.html">livingroom</a>
-                                        <ul>
-                                            <li><a href="#">chair</a></li>
-                                            <li><a href="#">table</a></li>
-                                            <li><a href="#">carpet</a></li>
-                                            <li><a href="#">Sofa</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span>
-                                        <img src="~/assets/images/category-thumb/6.png"
-                                             alt="Category-thumb">
-                                    </span>Video games
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span>
-                                        <img src="~/assets/images/category-thumb/7.png"
-                                             alt="Category-thumb">
-                                    </span>Sport & tourisim
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span>
-                                        <img src="~/assets/images/category-thumb/8.png"
-                                             alt="Category-thumb">
-                                    </span>Fruits & Veggies
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span>
-                                        <img src="~/assets/images/category-thumb/9.png"
-                                             alt="Category-thumb">
-                                    </span>Computer & Laptop
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span>
-                                        <img src="~/assets/images/category-thumb/10.png"
-                                             alt="Category-thumb">
-                                    </span>Meat & Seafood
-                                </a>
-                            </li>
-                            <li class="rx-child">
-                                <a href="#">
-                                    <span>
-                                        <img src="~/assets/images/category-thumb/11.png"
-                                             alt="Category-thumb">
-                                    </span>Accessories
-                                </a>
-                            </li>
-                            <li class="rx-parent">
-                                <a class="rx-default">More Categories</a>
-                                <a class="rx-show">Less Categories</a>
-                            </li>
-                        </ul>
+                        @Html.Action("Menuleft", "TimKiem")
                     </div>
                 </div>
                 <!--Category Menu End-->
